@@ -2,6 +2,9 @@
 
 	* shr.el (shr-insert-document): Add doc string.
 	(shr-visit-file): Ditto.
+	(shr-remove-trailing-whitespace): New function.
+	(shr-insert-document): Use it to clean up trailing whitespace as the
+	final step (bug#10714).
 
 2012-02-06  Lars Ingebrigtsen  <larsi@gnus.org>
 
